Use `Stream#toList` instead of `Stream#collect(Collectors.toList())`